# bandcamp-artist-dl

./: .envrc  .gitignore  README.txt  flake.nix  module.nix  pyproject.toml  shell.nix
src/: lib.py  main.py  utils.py
